[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_flow_matching"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "diffrax>=0.7.0",
  "equinox>=0.13.0",
  "ipykernel>=6.30.0",
  "jax[cuda12]>=0.7.0",
  "jaxtyping>=0.3.2",
  "matplotlib>=3.10.5",
  "numpy>=2.3.2",
  "optax>=0.2.5",
]

[dependency-groups]
dev = ["pre-commit>=4.0.1", "ruff>=0.8.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "platform_system != 'Darwin'" }]

[[tool.uv.index]]
explicit = true
name = 'pytorch-cu128'
url = 'https://download.pytorch.org/whl/cu128'

[tool.ruff]
line-length = 119
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN002",
  "ANN003",
  "ANN401",
  "D413",
  "COM812",
  "D100",
  "D104",
  "D107",
  "D205",
  "PD901",
  "D400",
  "D401",
  "D415",
  "FA",
  "SLF",
  "INP",
  "TRY003",
  "TRY201",
  "EM",
  "FBT",
  "RET",
  "C406",
  "E741",
  "PLR2004",
  "RUF009",
  "RUF012",
  "BLE001",
  "S603",
  "S607",
  "S506",
  "FIX002",
  "NPY002",
  "G004",
  "S311",
  "PIE790",
  "TRY400",
  "S108",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "D203",
  "D213",
  "N806",
  "N803",
  "E712",
  "PLR0913",
  "TC001",
  "F722",
  "T201",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "ARG", "FBT"]
